// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PaginationList/SQLExecuteMode should match snapshot 1`] = `
<div>
  <div
    class="ant-list ant-list-vertical ant-list-loading ant-list-something-after-last-item css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 53px;"
        />
      </div>
    </div>
    <div
      class="ant-list-pagination ant-list-pagination-align-end"
    >
      <ul
        class="ant-pagination task-result-pagination-list css-dev-only-do-not-override-txh9fw"
      >
        <li
          class="ant-pagination-total-text"
        >
          <span>
            共 0 条数据
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-options"
        >
          <div
            aria-label="Page Size"
            class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-txh9fw ant-select-single ant-select-show-arrow ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Page Size"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="20 / page"
              >
                20 / page
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`test PaginationList/SQLExecuteMode should match snapshot 2`] = `
<div>
  <div
    class="ant-list ant-list-vertical ant-list-something-after-last-item css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="result-card-header"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="number"
                    >
                      #
                      1
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="result-card-status-wrap"
                    >
                      <span
                        class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                      >
                        准备执行
                      </span>
                      <div
                        class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                        role="separator"
                      />
                      <div
                        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-tag ant-tag-has-color ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-dfzxkh css-dev-only-do-not-override-txh9fw"
                            style="background-color: gray;"
                          >
                            <svg
                              height="19"
                              viewBox="0 0 18 19"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                                fill="#C3C6CD"
                              />
                            </svg>
                            0
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-dropdown-trigger basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        关联回滚工单
                      </span>
                      <svg
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        复制执行语句
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        分 析
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="result-card-content"
              >
                <div
                  class="result-card-content-options"
                >
                  <div
                    class="segmented-tabs-wrapper"
                  >
                    <div
                      class="ant-row segmented-row-wrapper css-156vlto css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-segmented-group"
                        >
                          <label
                            class="ant-segmented-item ant-segmented-item-selected"
                          >
                            <input
                              checked=""
                              class="ant-segmented-item-input"
                              type="radio"
                            />
                            <div
                              class="ant-segmented-item-label"
                              title="执行语句"
                            >
                              执行语句
                            </div>
                          </label>
                          <label
                            class="ant-segmented-item"
                          >
                            <input
                              class="ant-segmented-item-input"
                              type="radio"
                            />
                            <div
                              class="ant-segmented-item-label"
                              title="回滚语句"
                            >
                              回滚语句
                            </div>
                          </label>
                          <label
                            class="ant-segmented-item"
                          >
                            <input
                              class="ant-segmented-item-input"
                              type="radio"
                            />
                            <div
                              class="ant-segmented-item-label"
                              title="执行结果"
                            >
                              执行结果
                            </div>
                          </label>
                        </div>
                      </div>
                      <div
                        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 0px;"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                                  >
                                    <svg
                                      color="#4583FF"
                                      height="18"
                                      viewBox="0 0 18 19"
                                      width="18"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                    <span>
                                      <span
                                        class="sql-source-title"
                                      >
                                        所在文件
                                      </span>
                                      -
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                          >
                            <svg
                              height="18"
                              viewBox="0 0 1024 1024"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                                fill="#4583FF"
                              />
                            </svg>
                            <span>
                              <span
                                class="sql-source-title"
                              >
                                所在行
                              </span>
                              -
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
                    >
                      <div
                        class="actiontech-sql-renderer-wrapper css-dz7fl9"
                      >
                        <pre>
                          <code>
                            <div
                              class="code-line"
                            >
                              <span
                                class="code-line-number"
                              >
                                1
                              </span>
                              <span
                                class="hljs-keyword"
                              >
                                SELECT
                              </span>
                               
                              <span
                                class="hljs-number"
                              >
                                1
                              </span>
                              ;
                            </div>
                          </code>
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-ks72ok css-dev-only-do-not-override-txh9fw ant-tree-show-line"
                  role="tree"
                >
                  <div>
                    <input
                      aria-label="for screen reader"
                      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    class="ant-tree-treenode"
                    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
                  >
                    <div
                      class="ant-tree-indent"
                    >
                      <div
                        class="ant-tree-indent-unit"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-tree-list"
                    style="position: relative;"
                  >
                    <div
                      class="ant-tree-list-holder"
                    >
                      <div>
                        <div
                          class="ant-tree-list-holder-inner"
                          style="display: flex; flex-direction: column;"
                        >
                          <div
                            aria-grabbed="false"
                            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                            draggable="false"
                          >
                            <span
                              aria-hidden="true"
                              class="ant-tree-indent"
                            />
                            <span
                              class="ant-tree-switcher ant-tree-switcher_close"
                            >
                              <span
                                class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                              title=""
                            >
                              <span
                                class="ant-tree-title"
                              >
                                <span
                                  class="audit-result-tree-title"
                                >
                                  审核结果
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="result-card-footer"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="css-lpwde2"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                      <input
                        class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper result-describe-input css-1pd1cd5"
                        placeholder="添加说明"
                        type="text"
                        value="test"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-pagination ant-list-pagination-align-end"
    >
      <ul
        class="ant-pagination task-result-pagination-list css-dev-only-do-not-override-txh9fw"
      >
        <li
          class="ant-pagination-total-text"
        >
          <span>
            共 1 条数据
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-options"
        >
          <div
            aria-label="Page Size"
            class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-txh9fw ant-select-single ant-select-show-arrow ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Page Size"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="20 / page"
              >
                20 / page
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
